--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ACCESS_TOKEN_SECRET = 12312sfsfwrwthfghyu567uyu45334234
-ACCESS_TOKEN_EXPIRE_TIME = 1
+ACCESS_TOKEN_EXPIRE_TIME = '10d'
 REFRESH_TOKEN_SECRET =  12312fdsdfskldfj123123123lksdjfsldfk
-REFRESH_TOKEN_EXPIRE_TIME = 2
+REFRESH_TOKEN_EXPIRE_TIME = 20d
